Changed a lot of pages to be responsive, fixed alignment issues, using one controller for modals for both patients and doctors

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,7 @@ body {
 h1{
   text-align: center;
   line-height: 125%;
+  padding-bottom: 20px;
 }
 .navbar-brand{
   position: absolute;
